packages/deployment/k8s/apps/admin-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ui-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: vnextadmin
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: admin-ui
            port:
              number: 4200
